--- a/NODE/practica_parcial2/package.json
+++ b/NODE/practica_parcial2/package.json
@@ -13,6 +13,7 @@
     "content-type": "^1.0.5",
     "cookie": "^0.7.2",
     "cookie-signature": "^1.2.2",
+    "cors": "^2.8.5",
     "debug": "^4.4.3",
     "depd": "^2.0.0",
     "dunder-proto": "^1.0.1",
@@ -39,6 +40,7 @@
     "ipaddr.js": "^1.9.1",
     "is-promise": "^4.0.0",
     "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
     "math-intrinsics": "^1.1.0",
     "mathjs": "^15.1.0",
     "media-typer": "^1.1.0",
